force-app/main/default/objects/Invoice_Opportunity__c/Invoice_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Sales Opportunity</label>
    <nameField>
        <displayFormat>OPP-{000000}</displayFormat>
        <label>Invoice Opportunity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>