force-app/main/default/objects/Invoice_Opportunity__c/fields/Action_Plan_Funding__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Funding__c</fullName>
    <label>Action Plan Funding</label>
    <type>TextArea</type>
</CustomField>