force-app/main/default/objects/Invoice_Opportunity__c/fields/Action_Plan_Legal__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Legal__c</fullName>
    <label>Action Plan Legal</label>
    <type>TextArea</type>
</CustomField>