force-app/main/default/objects/Invoice_Opportunity__c/fields/Action_Plan_Ops__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Ops__c</fullName>
    <label>Action Plan Ops</label>
    <type>TextArea</type>
</CustomField>