force-app/main/default/objects/Invoice_Opportunity__c/fields/Action_Plan_Risk__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Risk__c</fullName>
    <label>Action Plan Risk</label>
    <type>TextArea</type>
</CustomField>