force-app/main/default/objects/Invoice_Opportunity__c/fields/Action_Plan_Sales__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Sales__c</fullName>
    <label>Action Plan Sales</label>
    <type>TextArea</type>
</CustomField>