force-app/main/default/objects/Invoice_Opportunity__c/fields/Allocation_Date_Funders__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Date_Funders__c</fullName>
    <label>Allocation Date (Funders)</label>
    <type>Date</type>
</CustomField>