force-app/main/default/objects/Invoice_Opportunity__c/fields/Amount_in_Prelisting__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_Prelisting__c</fullName>
    <formula>Supplier_Buyer_Map__r.PreListing_Advance_Invoice_Amount_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount in Prelisting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>