force-app/main/default/objects/Invoice_Opportunity__c/fields/Auto_Status__c.field-meta.xml
<CustomField>
    <fullName>Auto_Status__c</fullName>
    <formula>IF ( Supplier_Buyer_Map__r.Total_Invoice_value_alltime__c &gt;0, &quot;Rollover&quot;, &quot;New Invoice&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Status</label>
    <type>Text</type>
</CustomField>