force-app/main/default/objects/Invoice_Opportunity__c/fields/Auto_Status_Report__c.field-meta.xml
<CustomField>
    <fullName>Auto_Status_Report__c</fullName>
    <formula>IF(
Total_Finance_Value_All_Time__c &gt; 0, &quot;Financed&quot;,
IF (AND(ISBLANK( Supplier_Buyer_Map__c )=FALSE, TXT_status_opp__c = &quot;OIP&quot;, Map_Onboarding_Stage__c =&quot;90.Onboarded&quot;), &quot;Pending&quot;,
IF(
AND(Supplier_Buyer_Map__c &lt;&gt; &quot;&quot;, TXT_status_opp__c = &quot;Inactive&quot;)=TRUE ,&quot;Dropped&quot;,
IF (
AND( ISBLANK( Ops_Comments__c )=FALSE, TXT_status_opp__c = &quot;Dopped&quot;)=TRUE,&quot;Dropped&quot;,
IF (
AND( ISBLANK( Ops_Comments__c )=FALSE, TXT_status_opp__c = &quot;Inactive&quot;)=TRUE,&quot;Dropped&quot;,
IF (
AND( ISBLANK( Ops_Comments__c )=FALSE, TXT_status_opp__c = &quot;Others&quot;)=TRUE,&quot;Dropped&quot;,
IF(
AND(Supplier_Buyer_Map__c &lt;&gt; &quot;&quot;, TXT_status_opp__c = &quot;Dopped&quot;)=TRUE ,&quot;Dropped&quot;,
IF ( TXT_status_opp__c = &quot;Inactive&quot;,&quot;Dropped&quot;,
IF( TXT_status_opp__c = &quot;Dopped&quot;,&quot;Dropped&quot;,
IF(ISBLANK( Date_Termsheet_Sent__c ),&quot;Pending&quot;,
IF (ISBLANK( Date_Term_sheet_Signedt__c ), &quot;Pending&quot; ,
IF (AND(ISBLANK( Supplier_Buyer_Map__c )=FALSE, TXT_status_opp__c = &quot;OIP&quot;), &quot;Pending&quot;,
IF (TXT_status_opp__c = &quot;OIP&quot;, &quot;Pending&quot;,&quot;Pending&quot;
)))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Status Report</label>
    <type>Text</type>
</CustomField>