force-app/main/default/objects/Invoice_Opportunity__c/fields/Big_Buyer_Approach__c.field-meta.xml
<CustomField>
    <fullName>Big_Buyer_Approach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Big Buyer Approach</label>
    <type>Checkbox</type>
</CustomField>