force-app/main/default/objects/Invoice_Opportunity__c/fields/BNL_Sent__c.field-meta.xml
<CustomField>
    <fullName>BNL_Sent__c</fullName>
    <formula>Supplier_Buyer_Map__r.BNL_Sent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BNL Sent</label>
    <type>Checkbox</type>
</CustomField>