force-app/main/default/objects/Invoice_Opportunity__c/fields/BNL_Signed__c.field-meta.xml
<CustomField>
    <fullName>BNL_Signed__c</fullName>
    <formula>Supplier_Buyer_Map__r.BNL_Signed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BNL Signed</label>
    <type>Checkbox</type>
</CustomField>