force-app/main/default/objects/Invoice_Opportunity__c/fields/Brand_New__c.field-meta.xml
<CustomField>
    <fullName>Brand_New__c</fullName>
    <formula>IF( Total_Finance_Value_All_Time__c =0, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand New</label>
    <type>Checkbox</type>
</CustomField>