force-app/main/default/objects/Invoice_Opportunity__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <formula>IF  (OR (Agent_Account__c &lt;&gt;&quot;&quot;, Lead_Agent_Not_yet_Onboarded__c &lt;&gt;&quot;&quot;), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker</label>
    <type>Checkbox</type>
</CustomField>