force-app/main/default/objects/Invoice_Opportunity__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <formula>Supplier_Buyer_Map__r.Buyer__r.Name</formula>
    <label>Buyer</label>
    <type>Text</type>
</CustomField>