force-app/main/default/objects/Invoice_Opportunity__c/fields/Buyer_Call_exception_when_Big_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Call_exception_when_Big_Buyer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>tick when Buyer call done</inlineHelpText>
    <label>Buyer Call (exceptBigBuyer)(SALES)</label>
    <type>Checkbox</type>
</CustomField>