force-app/main/default/objects/Invoice_Opportunity__c/fields/Buyer_Call_Planned_Date__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Call_Planned_Date__c</fullName>
    <label>Buyer Call Planned Date</label>
    <type>DateTime</type>
</CustomField>