force-app/main/default/objects/Invoice_Opportunity__c/fields/Buyer_Country__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Country__c</fullName>
    <label>Buyer Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>