force-app/main/default/objects/Invoice_Opportunity__c/fields/Buyer_Lead_Origin__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Lead_Origin__c</fullName>
    <formula>Lead_Name__r.Lead_origin__c</formula>
    <label>Buyer Lead Origin</label>
    <type>Text</type>
</CustomField>