force-app/main/default/objects/Invoice_Opportunity__c/fields/Buyer_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Name__c</fullName>
    <label>Buyer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>