force-app/main/default/objects/Invoice_Opportunity__c/fields/Buyer_Onboarding_Stage__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Onboarding_Stage__c</fullName>
    <formula>Supplier_Buyer_Map__r.buyer_onboarding_stage__c</formula>
    <label>Buyer Onboarding Stage</label>
    <type>Text</type>
</CustomField>