force-app/main/default/objects/Invoice_Opportunity__c/fields/Buyer_Status__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Status__c</fullName>
    <label>Buyer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Report Requested</fullName>
            </value>
            <value>
                <fullName>Credit Report Ordered</fullName>
            </value>
            <value>
                <fullName>Credit Report Received</fullName>
            </value>
            <value>
                <fullName>Waiting Documents</fullName>
            </value>
            <value>
                <fullName>Dropped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>