force-app/main/default/objects/Invoice_Opportunity__c/fields/Buyer_Website__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Website__c</fullName>
    <formula>Supplier_Buyer_Map__r.Buyer__r.Website</formula>
    <label>Buyer Website</label>
    <type>Text</type>
</CustomField>