force-app/main/default/objects/Invoice_Opportunity__c/fields/Buyer_Year_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Year_of_Incorporation__c</fullName>
    <formula>TEXT(Supplier_Buyer_Map__r.Buyer__r.Year_of_incorporation__c)</formula>
    <label>Buyer Year of Incorporation</label>
    <type>Text</type>
</CustomField>