force-app/main/default/objects/Invoice_Opportunity__c/fields/CC_Approval_date__c.field-meta.xml
<CustomField>
    <fullName>CC_Approval_date__c</fullName>
    <formula>Supplier_Buyer_Map__r.Credit_Committee_Approval_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC Approval date</label>
    <type>Date</type>
</CustomField>