force-app/main/default/objects/Invoice_Opportunity__c/fields/CL_Provided_by_insurer__c.field-meta.xml
<CustomField>
    <fullName>CL_Provided_by_insurer__c</fullName>
    <label>CL Provided by insurer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>