force-app/main/default/objects/Invoice_Opportunity__c/fields/CL_Requested__c.field-meta.xml
<CustomField>
    <fullName>CL_Requested__c</fullName>
    <label>CL Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>