force-app/main/default/objects/Invoice_Opportunity__c/fields/CL_utilisation__c.field-meta.xml
<CustomField>
    <fullName>CL_utilisation__c</fullName>
    <formula>Supplier_Buyer_Map__r.Insurance_Utilisation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CL % utilisation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>