force-app/main/default/objects/Invoice_Opportunity__c/fields/Comments_from_Map__c.field-meta.xml
<CustomField>
    <fullName>Comments_from_Map__c</fullName>
    <formula>Supplier_Buyer_Map__r.Comments_Ops__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comments from Map</label>
    <type>Text</type>
</CustomField>