force-app/main/default/objects/Invoice_Opportunity__c/fields/Comments_Funding__c.field-meta.xml
<CustomField>
    <fullName>Comments_Funding__c</fullName>
    <label>Comments Funding</label>
    <type>TextArea</type>
</CustomField>