force-app/main/default/objects/Invoice_Opportunity__c/fields/Compliance_Owner__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compliance Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>