force-app/main/default/objects/Invoice_Opportunity__c/fields/COMPLIANCE_TASK__c.field-meta.xml
<CustomField>
    <fullName>COMPLIANCE_TASK__c</fullName>
    <label>COMPLIANCE TASK</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-Start onboarding Supplier-Buyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>