force-app/main/default/objects/Invoice_Opportunity__c/fields/Contact_Name_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_Supplier__c</fullName>
    <formula>Lead_Name_Supplier__r.FirstName +&quot; &quot; + Lead_Name_Supplier__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name Supplier</label>
    <type>Text</type>
</CustomField>