force-app/main/default/objects/Invoice_Opportunity__c/fields/Credit_Committee_Expected_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Committee_Expected_Date__c</fullName>
    <formula>Supplier_Buyer_Map__r.Credit_Committee_Expected_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Committee Expected Date</label>
    <type>Date</type>
</CustomField>