force-app/main/default/objects/Invoice_Opportunity__c/fields/Credit_Committee_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Committee_Status__c</fullName>
    <formula>TEXT ( Supplier_Buyer_Map__r.Credit_Committee_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Committee Status</label>
    <type>Text</type>
</CustomField>