force-app/main/default/objects/Invoice_Opportunity__c/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <formula>Supplier_Buyer_Map__r.Buyer__r.Credit_limit_insurance_currency__c</formula>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>