force-app/main/default/objects/Invoice_Opportunity__c/fields/Credit_Limit_Insurance_CCY__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Insurance_CCY__c</fullName>
    <formula>TEXT(Supplier_Buyer_Map__r.Buyer__r.Credit_Insurance_CCY__c)</formula>
    <label>Credit Insurance CCY</label>
    <type>Text</type>
</CustomField>