force-app/main/default/objects/Invoice_Opportunity__c/fields/Credit_Limit_Provided__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Provided__c</fullName>
    <formula>CL_Provided_by_insurer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Limit Provided</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>