force-app/main/default/objects/Invoice_Opportunity__c/fields/Credit_report_buyer__c.field-meta.xml
<CustomField>
    <fullName>Credit_report_buyer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick when Received</inlineHelpText>
    <label>Credit report buyer (OPS)</label>
    <type>Checkbox</type>
</CustomField>