force-app/main/default/objects/Invoice_Opportunity__c/fields/Credit_report_supplier__c.field-meta.xml
<CustomField>
    <fullName>Credit_report_supplier__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick when received</inlineHelpText>
    <label>Credit report supplier (OPS)</label>
    <type>Checkbox</type>
</CustomField>