force-app/main/default/objects/Invoice_Opportunity__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <formula>Supplier_Buyer_Map__r.Currency__c</formula>
    <label>Currency</label>
    <type>Text</type>
</CustomField>