force-app/main/default/objects/Invoice_Opportunity__c/fields/Custom_Product__c.field-meta.xml
<CustomField>
    <fullName>Custom_Product__c</fullName>
    <formula>Supplier_Buyer_Map__r.Incomlend_product__r.Name</formula>
    <label>Custom Product</label>
    <type>Text</type>
</CustomField>