force-app/main/default/objects/Invoice_Opportunity__c/fields/Date_Answer_Insurer__c.field-meta.xml
<CustomField>
    <fullName>Date_Answer_Insurer__c</fullName>
    <label>Date Answer Insurer</label>
    <type>Date</type>
</CustomField>