force-app/main/default/objects/Invoice_Opportunity__c/fields/Date_First_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Date_First_Invoice__c</fullName>
    <label>Date First Cycle</label>
    <type>Date</type>
</CustomField>