force-app/main/default/objects/Invoice_Opportunity__c/fields/Date_First_Invoice_Financed__c.field-meta.xml
<CustomField>
    <fullName>Date_First_Invoice_Financed__c</fullName>
    <label>Date First Invoice Financed</label>
    <type>Date</type>
</CustomField>