force-app/main/default/objects/Invoice_Opportunity__c/fields/Date_Term_sheet_Signedt__c.field-meta.xml
<CustomField>
    <fullName>Date_Term_sheet_Signedt__c</fullName>
    <label>Date Term sheet Signed</label>
    <type>Date</type>
</CustomField>