force-app/main/default/objects/Invoice_Opportunity__c/fields/Date_Termsheet_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Termsheet_Sent__c</fullName>
    <label>Date Term Sheet Sent</label>
    <type>Date</type>
</CustomField>