force-app/main/default/objects/Invoice_Opportunity__c/fields/Date_Termsheet_Signed_auto__c.field-meta.xml
<CustomField>
    <fullName>Date_Termsheet_Signed_auto__c</fullName>
    <formula>Lead_Name_Supplier__r.Date_Termsheet_Signed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Termsheet Signed (auto)</label>
    <type>Date</type>
</CustomField>