force-app/main/default/objects/Invoice_Opportunity__c/fields/Direct_Contact_with_Customer__c.field-meta.xml
<CustomField>
    <fullName>Direct_Contact_with_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Contact with Customer</label>
    <type>Checkbox</type>
</CustomField>