force-app/main/default/objects/Invoice_Opportunity__c/fields/Email_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Email_Supplier__c</fullName>
    <formula>Lead_Name_Supplier__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Supplier</label>
    <type>Text</type>
</CustomField>