force-app/main/default/objects/Invoice_Opportunity__c/fields/Estimated_Allocation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Allocation_Amount__c</fullName>
    <label>Estimated Allocation Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>