force-app/main/default/objects/Invoice_Opportunity__c/fields/Expected_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Due_Date__c</fullName>
    <label>Expected Due Date</label>
    <type>Date</type>
</CustomField>