force-app/main/default/objects/Invoice_Opportunity__c/fields/Expected_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Submission_Date__c</fullName>
    <label>Expected Submission Date</label>
    <type>Date</type>
</CustomField>