force-app/main/default/objects/Invoice_Opportunity__c/fields/Expected_Tenor__c.field-meta.xml
<CustomField>
    <fullName>Expected_Tenor__c</fullName>
    <label>Expected Tenor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>