force-app/main/default/objects/Invoice_Opportunity__c/fields/First_Cycle__c.field-meta.xml
<CustomField>
    <fullName>First_Cycle__c</fullName>
    <inlineHelpText>For Forecast Report</inlineHelpText>
    <label>First Cycle</label>
    <length>250</length>
    <type>Text</type>
</CustomField>