force-app/main/default/objects/Invoice_Opportunity__c/fields/First_Cycle_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>First_Cycle_USD_Equiv__c</fullName>
    <formula>IF ( TEXT(CCY__c) = &quot;USD&quot;,First_invoice_Amount__c, First_invoice_Amount__c * Marketplace_product__r.FX_Rate_for_MI__r.rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Cycle USD Equiv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>