force-app/main/default/objects/Invoice_Opportunity__c/fields/First_Funded_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Funded_Date__c</fullName>
    <formula>Supplier_Buyer_Map__r.First_Invoice_Funded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Funded Date</label>
    <type>Date</type>
</CustomField>