force-app/main/default/objects/Invoice_Opportunity__c/fields/First_invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_invoice_Amount__c</fullName>
    <label>First Cycle Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>