force-app/main/default/objects/Invoice_Opportunity__c/fields/For_Forecast_Report__c.field-meta.xml
<CustomField>
    <fullName>For_Forecast_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For Forecast Report</label>
    <type>Checkbox</type>
</CustomField>