force-app/main/default/objects/Invoice_Opportunity__c/fields/Funder_Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>Funder_Discount_Rate__c</fullName>
    <description>Funder discount Rate</description>
    <formula>Supplier_Buyer_Map__r.Funder_Discount_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Funder discount Rate</inlineHelpText>
    <label>Funder Discount Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>