force-app/main/default/objects/Invoice_Opportunity__c/fields/Geographical_Zone__c.field-meta.xml
<CustomField>
    <fullName>Geographical_Zone__c</fullName>
    <formula>TEXT(Supplier_Buyer_Map__r.Geographical_zone__c)</formula>
    <label>Geographical Zone</label>
    <type>Text</type>
</CustomField>