force-app/main/default/objects/Invoice_Opportunity__c/fields/Good_service_Description__c.field-meta.xml
<CustomField>
    <fullName>Good_service_Description__c</fullName>
    <label>Good&amp;service Description</label>
    <type>TextArea</type>
</CustomField>