force-app/main/default/objects/Invoice_Opportunity__c/fields/Head_of_Sales_Comments__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Sales_Comments__c</fullName>
    <inlineHelpText>for Weekly report forecast</inlineHelpText>
    <label>Head of Sales Comments</label>
    <type>TextArea</type>
</CustomField>