force-app/main/default/objects/Invoice_Opportunity__c/fields/Head_Of_Sales_Priorities__c.field-meta.xml
<CustomField>
    <fullName>Head_Of_Sales_Priorities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Head Of Sales Priorities</label>
    <type>Checkbox</type>
</CustomField>