force-app/main/default/objects/Invoice_Opportunity__c/fields/Important_Notes__c.field-meta.xml
<CustomField>
    <fullName>Important_Notes__c</fullName>
    <label>FORECAST STATUS</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>