force-app/main/default/objects/Invoice_Opportunity__c/fields/In_Progress_Invoice_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Invoice_Amount_USD__c</fullName>
    <label>In Progress Invoice Amount USD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>