force-app/main/default/objects/Invoice_Opportunity__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <label>Facility Fee</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>