force-app/main/default/objects/Invoice_Opportunity__c/fields/Insurance_CCY__c.field-meta.xml
<CustomField>
    <fullName>Insurance_CCY__c</fullName>
    <formula>TEXT(Lead_Name__r.Credit_Limit_Requested_CCY__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance CCY</label>
    <type>Text</type>
</CustomField>