force-app/main/default/objects/Invoice_Opportunity__c/fields/Insured_by__c.field-meta.xml
<CustomField>
    <fullName>Insured_by__c</fullName>
    <formula>TEXT(Supplier_Buyer_Map__r.Buyer__r.Insured_by__c)</formula>
    <label>Insured by</label>
    <type>Text</type>
</CustomField>