force-app/main/default/objects/Invoice_Opportunity__c/fields/Insurer_Name__c.field-meta.xml
<CustomField>
    <fullName>Insurer_Name__c</fullName>
    <label>Insurer Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coface</fullName>
            </value>
            <value>
                <fullName>Atradius</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>BCC Trade Credit Pty Ltd - Reverse Factoring</fullName>
            </value>
            <value>
                <fullName>FCI-NFC</fullName>
            </value>
            <value>
                <fullName>SBLC</fullName>
            </value>
            <value>
                <fullName>ICEIC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>