force-app/main/default/objects/Invoice_Opportunity__c/fields/Invoice_Finance_Deal__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Finance_Deal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoice Finance Deal</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Invoice is not into the related Supplier Buyer Map of the Invoice Opportunity</errorMessage>
        <filterItems>
            <field>invoice_finance_deal__c.Supplier_Buyer_Map__c</field>
            <operation>equals</operation>
            <valueField>$Source.Supplier_Buyer_Map__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>invoice_finance_deal__c</referenceTo>
    <relationshipName>Invoice_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>