force-app/main/default/objects/Invoice_Opportunity__c/fields/IPC_CL__c.field-meta.xml
<CustomField>
    <fullName>IPC_CL__c</fullName>
    <label>IPC CL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>