force-app/main/default/objects/Invoice_Opportunity__c/fields/LC_lite__c.field-meta.xml
<CustomField>
    <fullName>LC_lite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LC lite</label>
    <type>Checkbox</type>
</CustomField>