force-app/main/default/objects/Invoice_Opportunity__c/fields/Lead_Agent_Not_yet_Onboarded__c.field-meta.xml
<CustomField>
    <fullName>Lead_Agent_Not_yet_Onboarded__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lead agent when the account agent is not yet created ( not onboarded yet)</inlineHelpText>
    <label>Lead Agent (Not yet Onboarded)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Lead.Product_type__c</field>
            <operation>equals</operation>
            <value>Agent</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Sales Opportunities (Lead Agent (Not yet Onboarded))</relationshipLabel>
    <relationshipName>Sales_Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>