force-app/main/default/objects/Invoice_Opportunity__c/fields/Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead name</description>
    <inlineHelpText>Put the Lead Name</inlineHelpText>
    <label>Lead Name Buyer</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Sales Opportunities</relationshipLabel>
    <relationshipName>Invoice_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>