force-app/main/default/objects/Invoice_Opportunity__c/fields/Lead_Name_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Name Supplier</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Sales Opportunities (Lead Name Supplier)</relationshipLabel>
    <relationshipName>Sales_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>