force-app/main/default/objects/Invoice_Opportunity__c/fields/Lead_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lead_Stage__c</fullName>
    <description>Lead Status from lead</description>
    <formula>TEXT (Lead_Name__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Lead Status from lead</inlineHelpText>
    <label>Lead Buyer  Stage</label>
    <type>Text</type>
</CustomField>