force-app/main/default/objects/Invoice_Opportunity__c/fields/Lead_Supplier_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lead_Supplier_Stage__c</fullName>
    <formula>TEXT (Lead_Name_Supplier__r.Status )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Supplier Stage</label>
    <type>Text</type>
</CustomField>