force-app/main/default/objects/Invoice_Opportunity__c/fields/Legal_Comment__c.field-meta.xml
<CustomField>
    <fullName>Legal_Comment__c</fullName>
    <label>Legal Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>