force-app/main/default/objects/Invoice_Opportunity__c/fields/Legal_Owner__c.field-meta.xml
<CustomField>
    <fullName>Legal_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>