force-app/main/default/objects/Invoice_Opportunity__c/fields/LEGAL_TASK__c.field-meta.xml
<CustomField>
    <fullName>LEGAL_TASK__c</fullName>
    <label>LEGAL TASK</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-Review Trade Document</fullName>
            </value>
            <value>
                <fullName>Complete the Map</fullName>
                <label>2-Complete the Map</label>
            </value>
            <value>
                <fullName>10-Tasks Completed</fullName>
                <isActive>false</isActive>
                <label>10-Tasks Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>