force-app/main/default/objects/Invoice_Opportunity__c/fields/Map_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Map_Creation_Date__c</fullName>
    <formula>Supplier_Buyer_Map__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Map Creation Date</label>
    <type>Date</type>
</CustomField>