force-app/main/default/objects/Invoice_Opportunity__c/fields/Map_General_Status__c.field-meta.xml
<CustomField>
    <fullName>Map_General_Status__c</fullName>
    <description>General Status from Map</description>
    <formula>TeXT(Supplier_Buyer_Map__r.General_Status_Map__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>General Status from Map</inlineHelpText>
    <label>Map General Status</label>
    <type>Text</type>
</CustomField>